--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ h2 {
   margin-bottom: 1.6rem;
 }
 
+h2 {
+  font-size: 2rem;
+}
+
 h1 {
   font-size: 2.2rem;
 }
@@ -19,4 +23,230 @@ h2 {
 p {
   margin-bottom: 1.6rem;
   line-height: 1.4;
+}
+
+a {
+  color: #4c55a1;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+.nav-horizontal {
+  display: flex;
+  align-items: center;
+}
+
+.nav-horizontal a {
+  color: midnightblue;
+  padding-left: 0.5rem;
+  text-decoration: none;
+}
+
+.category,
+.button {
+  display: inline-block;
+  padding: 0.3rem 0.5rem;
+  background-color: #4c55a1;
+  border-radius: 4px;
+  color: white;
+  text-decoration: none;
+}
+
+.button {
+  font-size: 100%;
+  border: none;
+  padding: 0.8rem 1rem;
+}
+
+.icon {
+  display: inline-block;
+  width: 2vw;
+}
+
+.icon-sm {
+  width: 1vw;
+  padding-right: 0.5rem;
+}
+.card {
+  background-color: rgb(250, 250, 255);
+  box-shadow: 0px 0px 3px gainsboro;
+}
+
+.card header div {
+  order: -1;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card img {
+  object-fit: cover;
+  width: 100%;
+}
+
+.card header {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-info {
+  padding: 1rem;
+}
+
+.card-big {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  margin: 2rem 0px;
+}
+
+.wrapper {
+  max-width: 1100;
+  padding: 0px 4vw;
+  margin: 0px auto;
+  box-sizing: border-box;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo p {
+  margin: 0px;
+}
+
+.header-main .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.header-main button {
+  border: none;
+  background-color: transparent;
+}
+
+.header-main {
+  background-color: rgb(250, 250, 255);
+  padding: 1rem 0rem;
+}
+
+.footer-main {
+  background-color: rgb(250, 250, 255);
+  padding: 10px;
+}
+
+.footer-main .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.footer-main p {
+  margin: 0;
+}
+
+.article-body.wrapper {
+  padding: 2rem 8vw 6rem;
+}
+
+.article-info {
+  display: flex;
+  align-items: center;
+}
+
+.article-info img {
+  border-radius: 50%;
+  margin-right: 1vw;
+  border: 1px solid white;
+}
+
+.article-info a {
+  color: white;
+  text-decoration: none;
+  margin-right: 1vw;
+}
+
+.article-info a:hover {
+  text-decoration: underline;
+}
+
+.article-info time {
+  color: white;
+}
+.article-header {
+  padding: 8rem 0px 3rem;
+  background: navy url(assets/images/roatan-main.jpg) no-repeat center;
+  background-size: cover;
+}
+
+.article-header .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.article-header .category {
+  order: -1;
+}
+
+.article-header h1 {
+  color: white;
+  font-weight: bold;
+}
+
+.landing-content {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 1.5rem;
+  margin-bottom: 4rem;
+}
+
+.landing-content aside {
+  margin-top: 7rem;
+}
+
+.card-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(4, auto);
+  grid-gap: 1.5rem;
+}
+
+.card-list-header {
+  grid-row: 1/2;
+  grid-column: 1/3;
+}
+
+.card-list .button {
+  grid-column: -2 /-1;
+  align-self: end;
+  justify-self: center;
+  margin-top: 4rem;
+}
+
+.newsletter {
+  padding: 1rem;
+  color: white;
+  text-align: center;
+  background-color: #4c55a1;
+}
+
+.newsletter button {
+  background-color: black;
+}
+
+.newsletter form {
+  display: flex;
+  margin-bottom: 1rem;
+  padding: 0px 1rem 0px;
+}
+
+.newsletter input {
+  width: 100%;
+  border: none;
+  border-radius: 4px 0px 0px 4px;
 }
